Mon Jun  5 14:31:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Inmemory database now supports "keys" properly.

Mon Jun  5 14:26:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Enable storage of the sum of the wdfs in a SleepyList in the list.
	  Use this to implement SleepyDatabase::get_doclength(), which reads
	  the wdfsum from the termlist.

Mon Jun  5 14:22:33 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement PostList::get_doclength() in each branchpostlist rather
	  than actually in the BranchPostList base class, since each
	  implementation needs to be different (both sub-postlists are
	  not always valid)

	* Use PostList::get_doclength() rather than the database version, to
	  get the document length in the matcher.

Sat Jun  3 00:31:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attempt to make LocalMatch asks the query for the document length,
	  rather than the database.  This code currently commented out,
	  because it causes test failures and a segfault.

Sat Jun  3 00:18:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a get_doclength() method to postlists.  Some return the
	  result of calling the get_doclength() method of the corresponding
	  database, branch ones return the result from one of the sub-branches,
	  and the sleepycat one returns the value stored in the postlist.
	  SleepyDatabase::get_doclength() is still unimplemented, however.

Sat Jun  3 00:01:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Improved configuration for finding c++ interface to sleepycat.  Now
	  works at home again...

Fri Jun  2 19:09:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Now stores document lengths in postlists.  Not yet accessible,
	  however.

Fri Jun  2 19:09:00 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented NetworkDatabase::open_document().  Tests still fail