@@ -1,3 +1,7 @@
+Mon Jun  5 14:36:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Fix internaltest to cope with changed SleepyListItem parameters.
+
 Mon Jun  5 14:31:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Inmemory database now supports "keys" properly.
